# nes_emulator

./: Cargo.toml  README.md
src/: bus.rs  cpu.rs  main.rs  mapper.rs  memory.rs  opcodes.rs  ppu.rs  rom.rs
src/mapper/: nrom.rs
